2006-08-04  Petr Ovtchenkov  <ptr@island.corbina.net>

	* xmt.h, xmt.cc: join should return either pointer or
	integer, but fit both in size; this is critical on platforms
	where sizeof(int) != sizeof(void *), for example 64-bits Linux;
	change in declaration of thread entry function.

2006-07-13  Petr Ovtchenkov  <ptr@island.corbina.net>

	* xmt.cc: fix thread suspend functional for POSIX threads.

2006-06-29  Petr Ovtchenkov  <ptr@island.corbina.net>

	* xmt.h: use template specialization for recursive-safe/unsafe
	spinlock as for Mutexes; use common template for __Locker
	for all Mutex-like locks; add typedefs for Spinlock family.

2006-06-28  Petr Ovtchenkov  <ptr@island.corbina.net>

	* xmt.cc: clean pass thread's return code---avoid
	warnings on machines with sizeof(void *) > sizeof(int),
	i.e. on ia64/amd64.

2005-12-07  Petr Ovtchenkov  <ptr@island.corbina.net>

	* config/_freebsd.h: fix _FIT defines for spinlock
	and rwlock functions on FreeBSD 5.3.

	* xmt.h, xmt.cc: throw invalid_argument exception
	if shared or recursive mutex not supported by platform;
	use namespace xmt instead of __impl.

	* thr_mgr.h, thr_mgr.cc: use namespace xmt instead
	of __impl.

	* libxmt: version 1.8.2

2005-11-29  Petr Ovtchenkov  <ptr@island.corbina.net>

	* xmt.h: add pthread_rwlock_* functionality.

	* libxmt: version 1.8.1

2005-08-19  Petr Ovtchenkov  <Petr.Ovchenkov@Kaspersky.COM>

	* xmt.h: created class LockerExt that work like Locker
	[auto-unlock in destructor] but take native mutex object.

	* libxmt: version 1.8.0

2005-06-30  Petr Ovtchenkov  <ptr@island.plnet.ru>

	* xmt.cc: Use local define to detect Netware;
	don't use set_terminate, set_unexpected on Netware

	* mwccnlm.mak: makefile for MetroWerks CodeWarrior for
	Novell Netware.

2005-03-25  Petr Ovtchenkov  <ptr@island.plnet.ru>

	* Makefile: revision of Makefiles---path to stlport lib and
	-lstlport went to common Makefiles.

2004-11-05  Petr Ovtchenkov  <ptr@Island.Br.UrbanNet.Ru>
